// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot on Android 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 3,
          "elevation": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 5,
          "paddingBottom": 10,
          "paddingTop": 10,
          "shadowColor": "#282828",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 1,
        },
        Object {
          "backgroundColor": undefined,
        },
        Object {},
      ]
    }
  >
    <MaterialIcon
      color="#fff"
      size={24}
    />
    <DefaultFont
      style={
        Object {
          "color": "#fff",
          "fontFamily": "System",
          "fontWeight": "bold",
          "marginLeft": 0,
        }
      }
    />
  </View>
</TouchableNativeFeedback>
`;

exports[`should match snapshot on iOS 1`] = `
<TouchableOpacity
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 3,
        "elevation": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "paddingBottom": 10,
        "paddingTop": 10,
        "shadowColor": "#282828",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 1,
      },
      Object {
        "backgroundColor": undefined,
      },
      Object {},
    ]
  }
>
  <MaterialIcon
    size={24}
  />
  <DefaultFont
    style={
      Object {
        "color": "#fff",
        "fontFamily": "System",
        "fontWeight": "bold",
        "marginLeft": 0,
      }
    }
  />
</TouchableOpacity>
`;
